@@ -1,3 +1,8 @@
+2011-07-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* fix resize behaviour of node windows
+	* add message label with some status information
+
 2011-06-14  Hendrik Tews <prooftree@askra.de>
 
 	* release version 0.4 on 2011-06-14 11:26:01 UTC
